toy-table-macro/tests/single-lifetime-only.stderr
error: tables can contain at most a single lifetime
 --> tests/single-lifetime-only.rs:2:28
  |
2 |     SingleLifetimeOnly<'a, 'b> {
  |                            ^^

error: only a single unbounded lifetime is allowed
  --> tests/single-lifetime-only.rs:10:26
   |
10 |     NoLifetimeBounds<'a: 'b> {
   |                          ^^
